<resources>
    <string name="app_name">APPLICATION</string>
    <string name="started_title">Welcome to our app</string>
    <string name="started_sub_title">
           Nice to meet you,come join our community!
           <br><b>Login</b> if you already have an account.</br>
           <br><b>Register</b> to get started with the app.</br>
        
    </string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Wellcome </string>



    <string name="login_email">Phone number,email or username</string>
    <string name="login_password">password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t have an account
    <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">create an account</string>
    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font>
        to get start with this app.
    </string>
    <string name="register_fullname">your full name</string>
    <string name="register_email">mail-id</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_have_account">
        I already have an account
    <font color="#00C9B8"><b>Login</b></font>
    </string>

    <string name="home_title">Hello world</string>
    <string name="home_sub_title">
    Nice to meet you,well come to Home
    </string>
    <string name="btn_logout">LOGOUT</string>

</resources>