<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary_color"
    android:padding="20dp">


    <TextView
        android:id="@+id/tv_started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="4dp"
        android:text="@string/started_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/tv_stated_sub_title"
        android:layout_width="362dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:lineHeight="20sp"
        android:text="@string/started_sub_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_started_title" />

    <ImageView
        android:id="@+id/img_photo2_started"
        android:layout_width="383dp"
        android:layout_height="314dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        android:src="@drawable/photo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/ButtonWhite"
        android:layout_width="331dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:text="@string/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="608dp"
        app:layout_constraintTop_toBottomOf="@+id/img_photo2_started"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonWhite"
        android:layout_width="331dp"
        android:layout_marginTop="15dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:text="@string/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="542dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"/>


</androidx.constraintlayout.widget.ConstraintLayout>